# Inalambria-Insights

./: .env.example  .gitignore  ARQUITECTURA_CORE.md  EJEMPLOS_USAGE.md  GOOGLE_DRIVE_AUTH.md  MONITOR_README.md  PIPELINE_FLOW.md  PROJECT_SUMMARY.txt  QUICKSTART_UV.md  README.md  README_LOCAL_PIPELINE.md  TEST_LOCAL.py  UV_GUIDE.md  cache_s3_to_duckdb.py  config_pipeline_local.json  debug_classifier.py  get_aws_credentials.sh  pyproject.toml  requirements.txt  run_pipeline_live.py  run_pipeline_locally.py  run_stage_text_normalizer.py  setup.py  test_classifier_10.py  test_classifier_100.py  test_duckdb_s3.py  test_pipeline_clean.py  test_pipeline_monitor.py  test_real_data.py  test_real_data_limited.py
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: settings.py  taxonomy.json
docs/: ANALISIS_SOLAPAMIENTOS_TAXONOMIA.md  CLASSIFIER.md  EJECUTIVO_PROBLEMA_TAXONOMIA.md  METADATA_SCHEMA.md  PHASE_1_2_3_SUMMARY.md  PLANTILLAS_ANALYSIS.md  PROJECT_STATUS.md  README.md  RESUMEN_VISUAL_PROBLEMA.md  STAGE_DATA_READER.md  STAGE_TEXT_NORMALIZER.md  TEST_CLASSIFIER_100_RESULTS.md
docs/stages/: GUIA_CORE_LECTURA.md  pipeline_inalambria_v2.md
implementation_documentation/: pipeline_inalambria.md
pipeline/: __init__.py
pipeline/core/: __init__.py  data_reader.py  io_utils.py  models.py  stats_collector.py  text_normalizer.py
pipeline/monitor/: progress_monitor.py  progress_ui.py  progress_ui_live.py
pipeline/orchestrator/: __init__.py
pipeline/stages/: __init__.py  message_splitter.py  rule_classifier.py  (+1 more)
s3_query/: AWS_SETUP.md  IMPLEMENTACION.md  README.md  TEMP_aggregator.py  TEMP_phone_scorer.py  TEMP_s3_scanner.py  TEMP_template_lookup.py  __init__.py
scripts/: README.md  TEMP_score_phones.py  analyze_rule_classifications.py  export_all_classifications.py  export_pending_templates.py  run_classifier_frequent_templates.py  run_pipeline_flexible.py  run_pipeline_live.py  run_stage_classifier.py  run_stage_data_reader.py  run_stage_text_normalizer.py
tests/: conftest.py  test_classifier_orchestrator.py  test_classifier_storage.py  test_data_reader.py  test_full_parquet.py  test_message_splitter.py  test_pipeline_storage.py  test_rule_classifier.py  test_sql_template_store.py  test_template_extractor.py  test_template_extractor_new_tokens.py  test_text_normalizer.py
(+10 files in other folders)
