[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sms-template-pipeline"
version = "0.1.0"
description = "SMS Template Extraction and Classification Pipeline"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Manuel Cruz", email = "manuelcruzg78@gmail.com"}
]
license = {text = "MIT"}
keywords = ["sms", "nlp", "template-extraction", "classification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.3.0",
    "pyarrow>=4.0.0",
    "numpy>=1.21.0",
    "rich>=10.0.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "duckdb>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12.0",
    "pytest-asyncio>=0.21.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]
prod = [
    "fastapi>=0.70.0",
    "uvicorn>=0.15.0",
    "celery>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/inalambria/sms-template-pipeline"
Repository = "https://github.com/inalambria/sms-template-pipeline"

[tool.uv]
# uv configuration (python version is in [project] section as requires-python)

[tool.uv.sources]
# Pinned package versions (optional)
# example = { path = "./packages/example", editable = true }

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
